--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "next": "12.1.0",
+    "nextjs-cors": "^2.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "supertokens-auth-react": "^0.19.0",
+    "supertokens-node": "^9.1.1"
   },
   "devDependencies": {
     "eslint": "8.11.0",
