--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "supertokens-node": "^9.1.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "cypress": "^9.5.3",
     "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
