--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nextjs-cors": "^2.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "supertokens-auth-react": "^0.19.0",
     "supertokens-node": "^9.1.1"
   },
