--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^34.0.0",
     "@ckeditor/ckeditor5-react": "^5.0.0",
+    "axios": "^0.27.2",
+    "html-react-parser": "^1.4.12",
+    "moment": "^2.29.3",
     "next": "12.1.0",
     "nextjs-cors": "^2.1.0",
     "react": "17.0.2",
