--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-image-crop": "^10.0.1",
     "supertokens-auth-react": "^0.19.0",
     "supertokens-node": "^9.1.1"
   },
